<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="44dp"
    android:background="@color/white"
    tools:context=".SecondActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:elevation="2dp"
        android:id="@+id/card_view2"
        android:layout_marginTop="28dp"
        app:cardCornerRadius="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_photo"
        android:clickable="true"
        android:textSize="24sp"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/card_view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />
    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/first_name"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_edit"
        android:autofillHints="Name"
        android:inputType="textPersonName" />

<EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/last_name"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/et_first_name"
        android:autofillHints="Name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_private_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/private_information"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/et_last_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/email"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:padding="12dp"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_private_info"
        android:autofillHints="@gmail.com"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/phone_number"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:padding="12dp"
        android:drawableStart="@drawable/icon_phone"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:autofillHints="(707)678907"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:padding="12dp"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number"
        android:autofillHints="********"
        android:inputType="textPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>